# Prompt-Builder

./: README.md  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: PromptBuilder.tsx  TreeView.tsx
src/lib/: errors.ts  formatters.ts  payload.ts  session.ts  tokenize.ts  tree.ts
src/types/: fs.ts  prompt.ts  session.ts  units.ts
