[package]
name = "repo-prompt-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "repo_prompt_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
regex = "1"            # NEW: regex block extraction
calamine = "0.20"      # NEW: Excel/CSV reader
scraper = "0.18"       # NEW: HTML CSS selectors
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
